# icp-cc

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEBASE_OVERVIEW.md  Cargo.toml  HTTP_TEST_DEBUGGING_ROOT_CAUSE.md  ICP_MARKETPLACE_README.md  LOCAL_DEVELOPMENT.md  MIGRATION_GUIDE.md  Makefile  PASSKEY_IMPLEMENTATION_PLAN.md  PRODUCT_REQUIREMENTS.md  README.md  TODO.md  TODO_SIGNATURE_FIX.md  UX_BUGS_AND_FIXES.md  appwrite.config.json  docker-compose.dev.yml  docker-compose.yml  install-android-sdk.sh  install-just.sh  justfile  make-test.out  marketplace-local.env  package-lock.json  package.json  rust-toolchain.toml  vitest.config.ts
.cargo/: config.toml
.claude/: README.md  orchestrator-config.json  settings.json  settings.local.json
.serena/: project.yml
agent/: DOCKER_README.md  Dockerfile  REUSE_GUIDE.md  docker-compose.yml  entrypoint.sh  run-container.sh  wrangler-manager.sh
appwrite/: README.md  README_DEPLOYMENT.md  appwrite.json
appwrite-api-server/: .env.example  .env.local  README.md  jest.config.js  package-lock.json  package.json
appwrite-cli/: Cargo.toml
appwrite-cli/src/: config.rs  database.rs  functions.rs  main.rs  utils.rs
appwrite-cli/src/database/: tests.rs
backend/: .api-dev-port  .env.example  .env.tunnel.example  Cargo.toml  DEPLOY_RUNBOOK.md  DOCKER_DEPLOYMENT.md  Dockerfile  PROD_DEPLOYMENT.md  QUICKSTART.md  README.md  REFACTORING_STATUS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/docs/: ADMIN_OPERATIONS.md
backend/migrations/: 001_create_scripts.sql  001_create_scripts_sqlite.sql  002_create_reviews.sql  002_create_reviews_sqlite.sql  003_create_identity_profiles.sql  003_create_identity_profiles_sqlite.sql  003_create_keypair_profiles.sql  003_create_keypair_profiles_sqlite.sql  004_create_account_profiles.sql  004_create_account_profiles_sqlite.sql  005_create_passkeys.sql  005_create_passkeys_sqlite.sql  006_create_purchases.sql  006_create_purchases_sqlite.sql
backend/scripts/: add-sample-data.sh  dev-setup.sh  reset-db.sh  start-dev.sh  start-tunnel.sh
backend/src/: auth.rs  cleanup.rs  cors.rs  crypto_util.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  rate_limit.rs  responses.rs  script_language.rs  signature_gate.rs  startup_checks.rs  vault.rs
backend/src/handlers/: accounts.rs  admin.rs  health.rs  ic_proxy.rs  mod.rs  passkey.rs  recovery.rs  reviews.rs  scripts.rs  vault.rs
backend/src/handlers/ic_proxy/: tests.rs
backend/src/handlers/payments/: mod.rs  payment_http_tests.rs
backend/src/middleware/: admin_auth.rs  auth.rs  mod.rs
backend/src/repositories/: account_repository.rs  identity_repository.rs  mod.rs  passkey_repository.rs  purchase_repository.rs  script_repository.rs
backend/src/services/: account_service.rs  error.rs  icpay_payment_provider.rs  identity_service.rs  mod.rs  passkey_service.rs  payment_provider.rs  payment_service.rs  review_service.rs  script_service.rs
backend/tests/: auth_middleware_tests.rs  cors_tests.rs  crypto_util_tests.rs  list_bundle_omission_tests.rs  passkey_tests.rs  recovery_tests.rs  repository_tests.rs  review_auth_tests.rs  scripts_categories_tests.rs  search_tests.rs  signature_gate_tests.rs  signature_tests.rs  soft_authenticator.rs  vault_tests.rs
cloudflare-api/: Cargo.toml  package-lock.json  package.json  vitest.config.mts  worker-configuration.d.ts  wrangler.jsonc  wrangler.local.jsonc  wrangler.prod.jsonc
cloudflare-api-rust/: Cargo.toml  wrangler.local.jsonc  wrangler.toml
cloudflare-api/migrations/: 0001_initial_schema.sql
cloudflare-api/public/: index.html
cloudflare-api/src/: authorization_helper.ts  index-backup.ts  index.ts  lib.rs  lua-validation.ts  types.rs  types.ts  utils.rs  utils.ts
cloudflare-api/src/routes/: mod.rs  reviews.ts  scripts.ts  scripts_old.rs  search.rs  search.ts  stats.ts  validation.ts
cloudflare-api/test/: env.d.ts  index.spec.ts  script-routes-integration.test.ts  signature-verification.test.ts
cloudflare-api/test/helpers/: database.ts
crates/icp_core/: Cargo.toml
crates/icp_core/benches/: runtime.rs
crates/icp_core/src/: canister_client.rs  contract.rs  favorites.rs  ffi.rs  js_engine.rs  keypair.rs  lib.rs  lua_engine.rs  principal.rs  vault.rs  wasm_exports.rs
crates/icp_core/src/js_engine/: runtime.rs
crates/icp_core/tests/: candid_parse_tests.rs  favorites_tests.rs  fetch_candid_tests.rs  identity_vectors.rs  intl_probe.rs  parity_vectors.rs  pilot_e2e.rs  principal_tests.rs  sandbox_adversarial.rs
crates/icp_core/tests/common/: mod.rs
crates/icp_core/tests/fixtures/: pilot_sample.bundle.js
docs/: 2025-10-11-rust-core-integration.md  2025-10-12-ic-canister-client.md  ACCOUNT_PROFILES_DESIGN.md  ACCOUNT_PROFILES_UX_DESIGN.md  BROWSER_SUPPORT.md  HUMAN_EXPECTATIONS.md  OPEN_ISSUES.md  appwrite-function-urls.md  appwrite-sites-vs-functions.md  build-native.md  static-validation-safety.md
icp_autorun/: .flutter-plugins  pubspec.yaml
icp_identity_manager/: README.md  pubspec.yaml
parity/: README.md  (+1 more)
poem-backend/: .docker-compose.dev.yml.swp  .docker-compose.prod.yml.swp  .docker-compose.yml.swp  .env  .env.tunnel.example  .gitignore  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  LOCAL_DEVELOPMENT.md  QUICKSTART.md  README.md  REFACTORING_STATUS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
poem-backend/docs/: swagger.html
poem-backend/migrations/: 001_create_scripts_sqlite.sql  003_create_identity_profiles_sqlite.sql
poem-backend/scripts/: add-sample-data.sh  build-docker-binary.sh  dev-setup.sh  reset-db.sh  start-dev.sh  start-tunnel.sh
poem-backend/src/: auth.rs  db.rs  main.rs  models.rs  responses.rs
poem-backend/src/middleware/: auth.rs  mod.rs
poem-backend/src/repositories/: identity_repository.rs  review_repository.rs  script_repository.rs
poem-backend/src/services/: identity_service.rs  mod.rs  review_service.rs  script_service.rs
rust/icp_core/: Cargo.toml
rust/icp_core/src/: canister_client.rs  favorites.rs  ffi.rs  identity.rs  lib.rs
rust/icp_core/tests/: principal_tests.rs
(+925 files in other folders)
