[package]
name = "appwrite-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for setting up ICP Script Marketplace on Appwrite"

[[bin]]
name = "appwrite-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.10"
indicatif = "0.17"
colored = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
env_logger = "0.10"
log = "0.4"