[package]
name = "icp-marketplace-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
poem = "3.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time/UUID handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Config
dotenv = "0.15"

# Cryptography for ICP signature verification
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
base64 = "0.22"
ic-agent = "0.44"

# Passkey/WebAuthn authentication
webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5.0"

# Vault password recovery (Argon2id hashing of one-time recovery codes).
# NOTE: vault ENCRYPTION (Argon2id KDF + AES-256-GCM) is now client-side
# (A-4 W4); the backend is a pure opaque-blob store. The single source of
# truth for vault crypto params is crates/icp_core/src/vault.rs.
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
