[package]
name = "icp-marketplace-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
poem = "3.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time/UUID handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Config
dotenv = "0.15"

# Cryptography for ICP signature verification
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
base64 = "0.22"
ic-agent = "0.44"

# R-3b WU-1: IC byte-relay CORS proxy. reqwest is the HTTP client that forwards
# browser agent-js requests to ${IC_GATEWAY_HOST} (default ic0.app). rustls-tls
# matches the rest of the stack (sqlx uses runtime-tokio-rustls). Explicit dep
# (not transitive magic) per AGENTS.md "fail-fast, no transitive magic".
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# ICPay webhook verification: HMAC-SHA256 of the raw request body with the
# shared `ICPAY_WEBHOOK_SECRET`. `hmac` is the standard RustCrypto construction
# over `sha2` (already a dependency).
hmac = "0.12"

# Passkey/WebAuthn authentication
webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5.0"

# Vault password recovery (Argon2id hashing of one-time recovery codes).
# NOTE: vault ENCRYPTION (Argon2id KDF + AES-256-GCM) is now client-side
# (A-4 W4); the backend is a pure opaque-blob store. The single source of
# truth for vault crypto params is crates/icp_core/src/vault.rs.
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
# Enable poem's `test` feature (TestClient) for handler-level integration
# tests in main.rs. The lib already depends on poem; this just turns on the
# test-only module without adding it to the runtime dep set.
poem = { version = "3.0", features = ["test"] }
