[workspace]

[package]
name = "cloudflare-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["http", "d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
sha2 = "0.10"
base64 = "0.22"
time = { version = "0.3", features = ["wasm-bindgen", "serde", "formatting", "parsing"] }
futures = "0.3"

[features]
panic_hook = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = "s"
strip = true
