[package]
name = "icp_core"
version = "0.1.0"
edition = "2021"
description = "Core IC identity and principal utilities for Flutter integration"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# BIP39 mnemonic and seed
bip39 = { version = "2", default-features = false, features = ["std"] }
# Bitcoin bip32 derivation and secp256k1 types
bitcoin = { version = "0.32", default-features = true, features = ["std"] }
# Ed25519 key handling (pkcs8 for DER encoding per RFC 8410)
ed25519-dalek = { version = "2", default-features = false, features = ["pkcs8"] }
# secp256k1 with DER encoding per RFC 5480
k256 = { version = "0.13", default-features = false, features = ["pkcs8", "std"] }
# Hashing for SHA-224
sha2 = "0.10"
# Base64 for exporting keys in the same form as Dart
base64 = "0.22"
# Principal formatting (CRC32 + base32) and text <-> bytes
candid = { version = "0.10", features = ["value"] }
candid_parser = "0.2"
# Lightweight error type
thiserror = "2.0"
hex-literal = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "6"

# Embedded Lua interpreter for user scripting
# - lua54: use Lua 5.4
# - vendored: build Lua from source for reproducible mobile builds
# - serde: JSON bridge between Lua values and serde_json
# - send: allow Lua handle to be Send + Sync where applicable
mlua = { version = "0.11", features = ["lua54", "vendored", "serde", "send"] }

# Optional networking support (off by default to allow offline builds)
reqwest = { version = "=0.12.23", default-features = false, features = [
  "rustls-tls",
  "blocking",
] }
ic-agent = { version = "0.44.2" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
once_cell = "1"
tempfile = "3"

# For WebAssembly compilation
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }


[package.metadata.cargo-clippy]
allow = []
warn = ["clippy::all", "clippy::pedantic"]
deny = ["warnings"]
