[package]
name = "icp_core"
version = "0.1.0"
edition = "2021"
description = "Core IC identity and principal utilities for Flutter integration"
license = "MIT OR Apache-2.0"

[dependencies]
# BIP39 mnemonic and seed
bip39 = { version = "2", default-features = false, features = ["std"] }
# Bitcoin bip32 derivation and secp256k1 types
bitcoin = { version = "0.32", default-features = true, features = ["std"] }
# Ed25519 key handling
ed25519-dalek = { version = "2", default-features = false }
# Hashing for SHA-224
sha2 = "0.10"
# Base64 for exporting keys in the same form as Dart
base64 = "0.22"
# Principal formatting (CRC32 + base32) and text <-> bytes
candid = { version = "0.10", features = ["value"] }
# Lightweight error type
thiserror = "2.0"
hex-literal = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "6"

# Optional networking support (off by default to allow offline builds)
reqwest = { version = "=0.12.23", default-features = false, features = [
  "rustls-tls",
  "blocking",
] }
ic-agent = { version = "0.44.2" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = []
ffi = []

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
once_cell = "1"
tempfile = "3"


[package.metadata.cargo-clippy]
allow = []
warn = ["clippy::all", "clippy::pedantic"]
deny = ["warnings"]
